# RPCSimulation

./: CMakeLists.txt  README.md
avalanche/simulate/n1_Primary_Ionization/: Ionization  cluster.root  electron.root
avalanche/simulate/n2_GasFileTown/: gasfile
avalanche/simulate/n3_Elecread/: makefile
avalanche/simulate/n3_Elecread/GasFile/: gasfile
avalanche/simulate/n4_Sample/get_cluster/: get_cluster  get_cluster.C
avalanche/simulate/n4_Sample/merge/SaturatedCut/: SaturatedCut  SaturatedCut.C
avalanche/simulate/n4_Sample/merge/SpaceChargeEffect/: SpaceChargeEffect  town60.txt
avalanche/simulate/n4_Sample/merge/avalanche/: Merge_avalanche  Merge_avalanche.C  cluster.root
avalanche/simulate/n4_Sample/not_merge/Sample_avalanche/: Sample_avalanche
avalanche/simulate/n4_Sample/not_merge/SaturatedCut/: Sample_avalanche
avalanche/simulate/n5_Signal_correct/: Signal_correct
avalanche/simulate/n5_Signal_correct/saturated_correct/: Signal_correct  makefile
avalanche/simulate/n6_Efficiency_curve/: Efficiency_curve  Efficiency_curve.C  correct.txt  correct2mm.txt  plot_efficiency.C
avalanche/simulate2/n1_Primary_Ionization/: Ionization  cluster.root  electron.root
avalanche/simulate2/n3_Elecread/: Elecread.C
avalanche/simulate2/n3_Elecread/GasFile/: gasfile.C
avalanche/simulate2/n4_Sample/getTownsend/: Sample_i  makefile
avalanche/simulate2/n4_Sample/merge/SaturatedCut/: SaturatedCut.C
avalanche/simulate2/n4_Sample/merge/avalanche/: Merge_avalanche  须知
avalanche/simulate2/n4_Sample/not_merge/SaturatedCut/: Sample_avalanche.C  cluster.txt  cluster_new.txt
avalanche/simulate2/n4_Sample/not_merge/SpaceChargeEffect/: makefile
avalanche/simulate2/n5_Signal_correct/: vdrift.txt
avalanche/simulate2/n6_Efficiency_curve/: Efficiency_curve  Efficiency_curve.C  correct.txt  nocorrect
avalanche/simulate2/n6_Efficiency_curve/notcorrect/: makefile
avalanche/simulate3/n1_Primary_Ionization/: Ionization  Ionization.C  cluster1s5mm.root  electron.root
avalanche/simulate3/n2_GasFileTown/new/: gasfile_new
avalanche/simulate3/n3_Elecread/: Elecread
avalanche/simulate3/n4_Sample/getTownsend/: Sample_i.C
avalanche/simulate3/n4_Sample/merge/SpaceChargeEffect/: SpaceChargeEffect  SpaceChargeEffect.C
avalanche/simulate3/n4_Sample/merge/avalanche/: makefile
avalanche/simulate3/n4_Sample/not_merge/Sample_avalanche/: Sample_avalanche.C
avalanche/simulate3/n4_Sample/not_merge/SpaceChargeEffect/: SpaceChargeEffiect  SpaceChargeEffiect.C
avalanche/simulate3/n5_Signal_correct/: Signal_correct
avalanche/simulate3/n5_Signal_correct/saturated_correct/: Signal_correct.C
avalanche/simulate3/n6_Efficiency_curve/: Efficiency_curve  correct.txt  correct15.txt  plot_efficiency.C  plot_efficiency2.C
avalanche/simulate3/n6_Efficiency_curve/notcorrect/: Efficiency_curve
source/: CMakeLists.txt
source/n1_Primary_Ionization/: CMakeLists.txt  Ionization.cpp
source/n2_GasFileTown/: .gasfile.C.swo  .gasfile.C.swp  CMakeLists.txt  TownsendCof.cpp
source/n3_Elecread/: CMakeLists.txt
source/n3_Elecread/GasFile/: c2f4h2_ic4h10_sf6.gas
source/n4_Sample/get_cluster/: makefile
source/n4_Sample/merge/SpaceChargeEffect/: SpaceChargeEffect.C
source/n4_Sample/merge/avalanche/: vdrift60.txt
source/n5_Signal_correct/: CMakeLists.txt
source/n6_Efficiency_curve/: plot_efficiency2.C
source/n6_Efficiency_curve/notcorrect/: Efficiency_curve.C
source/simulate/: CMakeLists.txt
source/simulate/n1_Primary_Ionization/: CMakeLists.txt
source/simulate/n2_GasFileTown/: TownsendCof  TownsendCof.C
source/simulate/n2_GasFileTown/new/: gasfile_new.C
source/simulate/n3_Elecread/GasFile/: c2f4h2_97_ic4h10_3.gas
source/simulate/n4_Sample/merge/SpaceChargeEffect/: makefile
source/simulate/n5_Signal_correct/: Signal_correct.C
source/simulate/n6_Efficiency_curve/notcorrect/: town.txt
source/simulate2/n1_Primary_Ionization/: Ionization.C  dcs.txt  makefile
source/simulate2/n2_GasFileTown/: .TownsendCof.C.swp  gasfile.C
source/simulate2/n4_Sample/merge/SpaceChargeEffect/: town50.txt  vdrift50.txt
source/simulate2/n4_Sample/not_merge/Sample_avalanche/: makefile
source/simulate2/n4_Sample/not_merge/SaturatedCut/: town.txt
source/simulate2/n6_Efficiency_curve/: plot_efficiency2.C
source/simulate3/: CMakeLists.txt
source/simulate3/n2_GasFileTown/: TownsendCof.C  makefile2
source/simulate3/n2_GasFileTown/new/: makefile
source/simulate3/n3_Elecread/: dcs.txt
source/simulate3/n3_Elecread/GasFile/: c2f4h2_97_ic4h10_3（30-40）.gas
source/simulate3/n4_Sample/get_cluster/: cluster_new.txt  electron.root
source/simulate3/n4_Sample/merge/SaturatedCut/: makefile  须知
source/simulate3/n4_Sample/merge/SpaceChargeEffect/: 须知
source/simulate3/n4_Sample/merge/avalanche/: Merge_avalanche.C
source/simulate3/n5_Signal_correct/: Signal_correct.C  cluster1mm.root
source/simulate3/n6_Efficiency_curve/: Efficiency_curve.C  cluster1s5mm.root
source/simulate3/n6_Efficiency_curve/notcorrect/: vdrift.txt
