#########################################################
#                  Garfield Simulation                  #
#               Author : LAGARDE Francois               #
#########################################################

add_subdirectory(n1_Primary_Ionization)
add_subdirectory(n2_GasFileTown)
add_subdirectory(n3_Elecread)
add_subdirectory(n4_Sample)
add_subdirectory(n5_Signal_correct)
add_subdirectory(n6_Efficiency_curve)
